[gd_scene load_steps=22 format=2]

[ext_resource path="res://characters/emote/emote.gd" type="Script" id=1]
[ext_resource path="res://characters/emote/customer_meh.wav" type="AudioStream" id=2]
[ext_resource path="res://characters/emote/customer_happy.wav" type="AudioStream" id=3]
[ext_resource path="res://characters/emote/happy.png" type="Texture" id=4]
[ext_resource path="res://characters/emote/angry_face.png" type="Texture" id=5]
[ext_resource path="res://characters/emote/twitchy_face.png" type="Texture" id=6]
[ext_resource path="res://characters/emote/customer_mad.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [  ],
"loop": false,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 1 ), SubResource( 1 ) ],
"loop": true,
"name": "twitchy",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ) ],
"loop": true,
"name": "happy",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 13 ) ],
"loop": true,
"name": "mad",
"speed": 5.0
} ]

[node name="AnimatedSprite" type="AnimatedSprite"]
scale = Vector2( 2, 2 )
frames = SubResource( 14 )
animation = "New Anim"
speed_scale = 1.75
script = ExtResource( 1 )

[node name="HappySoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "soundfx"

[node name="MehSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "soundfx"

[node name="MadSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "soundfx"

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
